force-app/main/default/objects/Case_Product_Focus_Symptom__c/Case_Product_Focus_Symptom__c.object-meta.xml
<CustomObject>
    <label>Case Product Focus Symptom</label>
    <nameField>
        <label>Case Product Focus Symptoms Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Product Focus Symptoms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>