force-app/main/default/objects/Case_Product_Focus_Symptom__c/fields/Area_of_Focus__c.field-meta.xml
<CustomField>
    <fullName>Area_of_Focus__c</fullName>
    <label>Area of Focus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>