force-app/main/default/objects/Case_Product_Focus_Symptom__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Please ensure the picklist value is also added to the Case.Product__c field</description>
    <inlineHelpText>Please ensure the picklist value is also added to the Case.Product__c field</inlineHelpText>
    <label>Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>