force-app/main/default/objects/Case_Product_Focus_Symptom__c/fields/Sub_Symptom__c.field-meta.xml
<CustomField>
    <fullName>Sub_Symptom__c</fullName>
    <label>Sub Symptom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>