force-app/main/default/objects/Case_Product_Focus_Symptom__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Product__c</columns>
    <columns>Area_of_Focus__c</columns>
    <columns>Symptom__c</columns>
    <columns>Sub_Symptom__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>